test/org/midica/testfiles/failing/sk-duplicate.midica
INCLUDE inc/instruments.midica

META
	composer	Beethoven
	SOFT_KARAOKE
		language   ENGL
	END
	copyright   2nd line
	SOFT_KARAOKE
		author     the karaoke author
	END
END
